--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,7 +190,7 @@
     <!-- Sorting Keys -->
     <string name="sort_sort_by_label">Sort by:</string>
     <string name="sort_knowledgelevel">Knowledge Level</string>
-    <string name="sort_created">Creation Date</string>
+    <string name="sort_created">Created</string>
     <string name="sort_foreign_word">Foreign Word</string>
     <string name="sort_native_word">Native Word</string>
     <string name="sort_asc">Ascending</string>
