--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,9 +165,9 @@
         policy in the App Store or under the following link:
     </string>
     <string name="about_code_title">Open Source</string>
-    <string name="about_privacy_policy_url">https://liebald.info/privacy-policy/cula</string>
+    <string name="about_privacy_policy_url">https://erkenberg.github.io/CuLa/</string>
     <string name="about_cula_code_label">You can find the source code of the app on github:</string>
-    <string name="about_cula_code_url">https://github.com/SLiebald/CuLa</string>
+    <string name="about_cula_code_url">https://github.com/erkenberg/CuLa</string>
 
 
     <!-- Sorting Keys -->
